[gd_scene load_steps=23 format=3 uid="uid://dj3pqaq3v6bwo"]

[ext_resource type="Script" uid="uid://bgipw05toj78w" path="res://scripts/platformer_scene.gd" id="1_yte5o"]
[ext_resource type="PackedScene" uid="uid://d2jekmqnix52y" path="res://scenes/player.tscn" id="2_8w8yu"]
[ext_resource type="Texture2D" uid="uid://xbvs700g2epd" path="res://resources/crosshair.tres" id="3_xoih0"]
[ext_resource type="Texture2D" uid="uid://dki1spd0slwxj" path="res://assets/tropical/tropical_tilemap_slice_32x32.png" id="4_8w8yu"]
[ext_resource type="Texture2D" uid="uid://djumqlm6wttkh" path="res://assets/tropical/surface_water_32x32.png" id="4_f15g2"]
[ext_resource type="Texture2D" uid="uid://b4u6hsbyh7vou" path="res://assets/tropical/underwater_02_32x32.png" id="5_atnpy"]
[ext_resource type="Script" uid="uid://c8fectjj4powj" path="res://scripts/fps_counter.gd" id="5_f15g2"]
[ext_resource type="PackedScene" uid="uid://bl5dg3fjv4w6g" path="res://ui/hotbar.tscn" id="6_atnpy"]
[ext_resource type="Texture2D" uid="uid://dp42rf78somje" path="res://assets/tropical/seafloor_32x32.png" id="6_cy82x"]
[ext_resource type="Script" uid="uid://dvf50mvg0w6tm" path="res://ui/inventory_system.gd" id="8_q5qfs"]
[ext_resource type="PackedScene" uid="uid://bowihm3p0j4x7" path="res://ui/pause_menu.tscn" id="9_btm0u"]
[ext_resource type="PackedScene" uid="uid://dgdkbk47a63st" path="res://scenes/barrel.tscn" id="10_nrqbv"]
[ext_resource type="PackedScene" uid="uid://k0kkh12kws3d" path="res://ui/crafting_menu.tscn" id="10_xoih0"]
[ext_resource type="Script" uid="uid://covte3n64vx2f" path="res://ui/crafting_menu.gd" id="11_mx3pc"]
[ext_resource type="Script" uid="uid://b2o7r4ny0dsb" path="res://scripts/depth_counter.gd" id="14_atnpy"]
[ext_resource type="PackedScene" uid="uid://noyk5n0awjav" path="res://ui/stats_display.tscn" id="15_cy82x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru564"]
size = Vector2(13, 3.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q5qfs"]
texture = ExtResource("4_f15g2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_btm0u"]
texture = ExtResource("5_atnpy")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nrqbv"]
texture = ExtResource("6_cy82x")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 7, 16, 7, 16, 16, -16, 16)
0:0/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xoih0"]
texture = ExtResource("4_8w8yu")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_gwrsa"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "is_water"
custom_data_layer_0/type = 1
sources/3 = SubResource("TileSetAtlasSource_xoih0")
sources/11 = SubResource("TileSetAtlasSource_q5qfs")
sources/12 = SubResource("TileSetAtlasSource_btm0u")
sources/13 = SubResource("TileSetAtlasSource_nrqbv")

[node name="Platformer" type="Node2D"]
script = ExtResource("1_yte5o")

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_8w8yu")]
z_index = 1
position = Vector2(-1064, -39)

[node name="SwordArea" type="Area2D" parent="Player"]
position = Vector2(20, 0)
monitoring = false

[node name="SwordCollision" type="CollisionShape2D" parent="Player/SwordArea"]
position = Vector2(4.5, 3.25)
shape = SubResource("RectangleShape2D_ru564")

[node name="Crosshair" type="Sprite2D" parent="Player/SwordArea"]
modulate = Color(1, 1, 1, 0.7)
position = Vector2(8, 3)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_xoih0")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_gwrsa")
format = 2
layer_0/tile_data = PackedInt32Array(393182, 3, 1, 393183, 3, 1, 393181, 3, 1, 393180, 3, 1, 393179, 3, 1, 393178, 3, 1, 393177, 3, 1, 393176, 3, 1, 393175, 3, 1, 393174, 3, 1, 393173, 3, 1, 393172, 3, 1, 393171, 3, 1, 393170, 3, 1, 393169, 3, 1, 393168, 3, 1, 393167, 3, 1, 393166, 3, 1, 393165, 3, 1, 393164, 3, 1, 393163, 3, 1, 393162, 3, 1, 393161, 3, 1, 458728, 3, 2, 458727, 3, 1, 458726, 3, 1, 458725, 3, 1, 458724, 3, 1, 458723, 3, 3, 458722, 3, 1, 458721, 3, 1, 458720, 3, 1, 458719, 3, 1, 458718, 3, 1, 458717, 3, 4, 458716, 3, 1, 458715, 3, 1, 458714, 3, 1, 458713, 3, 1, 458712, 3, 1, 458711, 3, 1, 458710, 3, 1, 458709, 3, 1, 458708, 3, 1, 458707, 3, 1, 458706, 3, 1, 458705, 3, 1, 458704, 3, 1, 458703, 3, 1, 458702, 3, 1, 458701, 3, 1, 458700, 3, 1, 458699, 3, 1, 458698, 3, 1, 458697, 3, 1, 524264, 3, 1, 524263, 3, 1, 524262, 3, 1, 524261, 3, 1, 524260, 3, 1, 524259, 3, 1, 524258, 3, 1, 524257, 3, 1, 524256, 3, 1, 524255, 3, 1, 524254, 3, 1, 524253, 3, 1, 524252, 3, 1, 524251, 3, 1, 524250, 3, 1, 524249, 3, 2, 524248, 3, 1, 524247, 3, 1, 524233, 3, 1, 524234, 3, 1, 524235, 3, 1, 524236, 3, 1, 524237, 3, 1, 524238, 3, 1, 524239, 3, 1, 524240, 3, 3, 524241, 3, 1, 524242, 3, 1, 524243, 3, 1, 524244, 3, 1, 524245, 3, 1, 524246, 3, 1, 458729, 3, 1, 524265, 3, 1, 589801, 3, 1, 589802, 3, 1, 589803, 3, 1, 589804, 13, 0, 589805, 13, 0, 589800, 3, 1, 589799, 3, 1, 589798, 3, 1, 589797, 3, 1, 589796, 3, 1, 589795, 3, 1, 589794, 3, 1, 589793, 3, 1, 589792, 3, 1, 589791, 3, 1, 589790, 3, 1, 589789, 3, 1, 589788, 3, 1, 589787, 3, 1, 589786, 3, 1, 589785, 3, 1, 589784, 3, 1, 589783, 3, 1, 589782, 3, 1, 589781, 3, 1, 589780, 3, 1, 589779, 3, 1, 589778, 3, 1, 589777, 3, 1, 589776, 3, 1, 589775, 3, 1, 589774, 3, 1, 589773, 3, 1, 589772, 3, 1, 589771, 3, 1, 589770, 3, 1, 589769, 3, 1, 524266, 3, 1, 458730, 12, 0, 458731, 12, 0, 458732, 12, 0, 458733, 12, 0, 524269, 12, 0, 524268, 12, 0, 524267, 12, 0, 458734, 12, 0, 458735, 12, 0, 458736, 12, 0, 458737, 12, 0, 458738, 12, 0, 458739, 12, 0, 524275, 12, 0, 524274, 12, 0, 524273, 12, 0, 524272, 12, 0, 524271, 12, 0, 524270, 12, 0, 589806, 13, 0, 589807, 13, 0, 589808, 13, 0, 589809, 13, 0, 589810, 13, 0, 589811, 13, 0, 393193, 12, 0, 393194, 12, 0, 393195, 12, 0, 393196, 12, 0, 393197, 12, 0, 393198, 12, 0, 393199, 12, 0, 393200, 12, 0, 393201, 12, 0, 393202, 12, 0, 131051, 12, 0, 131052, 12, 0, 131053, 12, 0, 131054, 12, 0, 131055, 12, 0, 131056, 12, 0, 131057, 12, 0, 131058, 12, 0, 196594, 12, 0, 262130, 12, 0, 262129, 12, 0, 262128, 12, 0, 196592, 12, 0, 196591, 12, 0, 196590, 12, 0, 196589, 12, 0, 196588, 12, 0, 196587, 12, 0, 196586, 12, 0, 196593, 12, 0, 327664, 12, 0, 327663, 12, 0, 262126, 12, 0, 262125, 12, 0, 262124, 12, 0, 262123, 12, 0, 262122, 12, 0, 262121, 12, 0, 327657, 12, 0, 327658, 12, 0, 327659, 12, 0, 327660, 12, 0, 327661, 12, 0, 327662, 12, 0, 262127, 12, 0, 327665, 12, 0, 327666, 12, 0, 327667, 12, 0, 393203, 12, 0, 262131, 12, 0, 196595, 12, 0, 131059, 12, 0, 131050, 12, 0, 196585, 12, 0, 131049, 12, 0, 65523, 11, 0, 65522, 11, 0, 65521, 11, 0, 65520, 11, 0, 65519, 11, 0, 65518, 11, 0, 65517, 11, 0, 65516, 11, 0, 65515, 11, 0, 65514, 11, 0, 65513, 11, 0, 393192, 3, 1, 393191, 3, 1, 393190, 3, 1, 393189, 3, 1, 393188, 3, 1, 393187, 3, 1, 393186, 3, 1, 393185, 3, 1, 393184, 3, 1, 327650, 3, 1, 327651, 3, 1, 327652, 3, 1, 327653, 3, 1, 327654, 3, 1, 327655, 3, 1, 327656, 3, 1, 262119, 12, 0, 262118, 3, 1, 262117, 3, 1, 262116, 3, 1, 196580, 3, 1, 196579, 3, 1, 131043, 3, 1, 65506, 11, 0, 65505, 3, 0, 65504, 3, 0, 65503, 3, 0, 65502, 3, 0, 65501, 3, 0, 65500, 3, 0, 65499, 3, 0, 65498, 3, 0, 65497, 3, 0, 65496, 3, 0, 65495, 3, 0, 65494, 3, 0, 65493, 3, 0, 65492, 3, 0, 65491, 3, 0, 65490, 3, 0, 65489, 3, 0, 65488, 3, 0, 65487, 3, 0, 65486, 3, 0, 65485, 3, 0, 65484, 3, 0, 65483, 3, 0, 65482, 3, 0, 65481, 3, 0, 131017, 3, 3, 196553, 3, 1, 262089, 3, 1, 327625, 3, 1, 327626, 3, 1, 262090, 3, 1, 196554, 3, 1, 131018, 3, 1, 131019, 3, 1, 196555, 3, 1, 262091, 3, 1, 327627, 3, 1, 327628, 3, 1, 262092, 3, 1, 196556, 3, 1, 131020, 3, 1, 131021, 3, 1, 196557, 3, 1, 262093, 3, 1, 327629, 3, 1, 327630, 3, 1, 262094, 3, 1, 196558, 3, 1, 131022, 3, 1, 131023, 3, 1, 131024, 3, 1, 196560, 3, 1, 262096, 3, 1, 327631, 3, 1, 262095, 3, 1, 196559, 3, 1, 327632, 3, 1, 327648, 3, 1, 327649, 3, 1, 262115, 3, 1, 262114, 3, 1, 196578, 3, 1, 131042, 3, 1, 131041, 3, 1, 131040, 3, 1, 131039, 3, 1, 131038, 3, 1, 131037, 3, 1, 131036, 3, 1, 131035, 3, 1, 131034, 3, 1, 131033, 3, 1, 131032, 3, 1, 131031, 3, 1, 131030, 3, 1, 131029, 3, 1, 131028, 3, 1, 131027, 3, 1, 131026, 3, 1, 131025, 3, 1, 196561, 3, 1, 196562, 3, 1, 196563, 3, 1, 196564, 3, 1, 196565, 3, 1, 196566, 3, 1, 196567, 3, 1, 196568, 3, 3, 196569, 3, 1, 196570, 3, 1, 196571, 3, 1, 196572, 3, 1, 196573, 3, 1, 196574, 3, 4, 196575, 3, 1, 196576, 3, 1, 196577, 3, 1, 262113, 3, 1, 262112, 3, 1, 262111, 3, 1, 262110, 3, 1, 262109, 3, 1, 262108, 3, 1, 262107, 3, 1, 327642, 3, 1, 327641, 3, 1, 327640, 3, 1, 327639, 3, 1, 327638, 3, 1, 327637, 3, 1, 327636, 3, 1, 327635, 3, 1, 327634, 3, 1, 327633, 3, 1, 262097, 3, 1, 262099, 3, 1, 262100, 3, 1, 262101, 3, 1, 262102, 3, 1, 262103, 3, 1, 262104, 3, 1, 262105, 3, 4, 262106, 3, 1, 327645, 3, 1, 327646, 3, 1, 327647, 3, 1, 327644, 3, 1, 327643, 3, 1, 262098, 3, 4, 262120, 12, 0, 196583, 12, 0, 196584, 12, 0, 196582, 12, 0, 196581, 12, 0, 131045, 12, 0, 131044, 12, 0, 131046, 12, 0, 131047, 12, 0, 131048, 12, 0, 65507, 11, 0, 65508, 11, 0, 65509, 11, 0, 65510, 11, 0, 65511, 11, 0, 65512, 11, 0)

[node name="Coins" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="FPSCounter" type="Label" parent="UI"]
modulate = Color(1, 1, 0, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_bottom = 23.0
grow_horizontal = 0
text = "FPS: 60"
script = ExtResource("5_f15g2")

[node name="Hotbar" parent="UI" instance=ExtResource("6_atnpy")]
offset_left = -251.0
offset_top = -93.0
offset_right = 261.0
offset_bottom = -29.0

[node name="InventorySystem" type="Node" parent="UI"]
script = ExtResource("8_q5qfs")

[node name="PauseMenu" parent="UI" instance=ExtResource("9_btm0u")]
visible = false
offset_left = 482.0
offset_top = 235.0
offset_right = -448.0
offset_bottom = -325.0

[node name="CraftingMenu" parent="UI" instance=ExtResource("10_xoih0")]
offset_left = 241.0
offset_top = 24.0
offset_right = -175.0
offset_bottom = -140.0
script = ExtResource("11_mx3pc")

[node name="DepthCounter" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
text = "Depth: 0 Tiles"
script = ExtResource("14_atnpy")

[node name="StatsDisplay" parent="UI" instance=ExtResource("15_cy82x")]
offset_left = 8.0
offset_top = 544.0
offset_right = 8.0
offset_bottom = 544.0

[node name="Barrels" type="Node" parent="."]

[node name="Barrel" parent="Barrels" instance=ExtResource("10_nrqbv")]
position = Vector2(-1135, -54)

[node name="Barrel2" parent="Barrels" instance=ExtResource("10_nrqbv")]
position = Vector2(-1135, -29)

[node name="Barrel3" parent="Barrels" instance=ExtResource("10_nrqbv")]
position = Vector2(-1184, -53)

[node name="Barrel4" parent="Barrels" instance=ExtResource("10_nrqbv")]
position = Vector2(-1232, -28)

[node name="Barrel5" parent="Barrels" instance=ExtResource("10_nrqbv")]
position = Vector2(-1185, -28)
